...
        authButton.setTitleColor(customBlack, for: .normal)
        authButton.backgroundColor = customWhiteBackGrounds
        authButton.layer.cornerRadius = 16
        authButton.layer.masksToBounds = true
        authButton.translatesAutoresizingMaskIntoConstraints = false
        authButton.addTarget(self, action: #selector (didTapButton), for: .touchUpInside)
        authButton.accessibilityIdentifier = "Authenticate"
        return authButton
    }()
    
    @objc private func didTapButton(){
        self.performSegue(withIdentifier: segueIdToWebView, sender: self)
    }
...
